# opensource_career-ops

./: .env.example  .gitignore  .npmignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_CONTRACT.md  DOCKER.md  GETTING-STARTED.md  PLAN-DOCS-RESTRUCTURE.md  README.fr.md  README.md  SUPPORT.md  generate-cover-letter.mjs  generate-pdf.mjs  package.json  release-notes.md  test-all.mjs  update-system.mjs
backend/: .env.example  README.md  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  models.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/core/: apply_sessions.py  paths.py  safe_write.py  services.py  states.py  tracker_parse.py  views.py
backend/apps/cv/: admin.py  models.py  views.py
backend/apps/cv/migrations/: 0001_initial.py
backend/apps/discovery/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/portals/: admin.py  apps.py  models.py  services.py  views.py
backend/apps/runner/: admin.py  apps.py  models.py  views.py
backend/apps/skills_portfolio/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/tracker/: admin.py  models.py  serializers.py  views.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
backend/tests/: test_api_foundation.py  test_apply_playwright_fixtures.py  test_discovery_api.py  test_discovery_connectors.py  test_discovery_normalize.py  test_discovery_run.py  test_skills_llm_services.py  test_skills_portfolio_api.py
batch/: batch-prompt.md
(+285 files in other folders)
